<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/jokenpo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_jokenpo"
        android:textSize="@dimen/font_large"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- imagens -->
    <View
        android:id="@+id/selecao_tesoura"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toStartOf="@+id/img_pedra"
        app:layout_constraintTop_toBottomOf="@+id/jokenpo"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_tesoura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/tesoura"
        android:backgroundTint="@color/green"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toStartOf="@+id/img_pedra"
        app:layout_constraintTop_toBottomOf="@+id/jokenpo"
        app:layout_constraintStart_toStartOf="parent"
        />

    <View
        android:id="@+id/selecao_pedra"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/jokenpo"
        app:layout_constraintStart_toEndOf="@+id/img_tesoura"
        app:layout_constraintEnd_toStartOf="@+id/img_papel" />

    <ImageView
        android:id="@+id/img_pedra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/pedra"
        android:backgroundTint="@color/yellow"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/jokenpo"
        app:layout_constraintStart_toEndOf="@+id/img_tesoura"
        app:layout_constraintEnd_toStartOf="@+id/img_papel"
        />

    <View
        android:id="@+id/selecao_papel"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/jokenpo"
        app:layout_constraintStart_toEndOf="@+id/img_pedra"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/img_papel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/papel"
        android:backgroundTint="@color/orange"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/jokenpo"
        app:layout_constraintStart_toEndOf="@+id/img_pedra"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- sua escolha -->
    <TextView
        android:id="@+id/sua_escolha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sua_escolha"
        android:textSize="@dimen/font_normal"
        android:textColor="@color/black"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/img_pedra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/resultado_sua_escolha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_jogada"
        android:textSize="@dimen/font_normal"
        android:textColor="@color/black"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintTop_toBottomOf="@+id/img_pedra"
        app:layout_constraintStart_toEndOf="@+id/sua_escolha"
        />

    <!-- escolha da cpu -->
    <TextView
        android:id="@+id/escolha_cpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_escolha_cpu"
        android:textSize="@dimen/font_normal"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/sua_escolha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/resultado_esolha_cpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_jogada"
        android:textSize="@dimen/font_normal"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintTop_toBottomOf="@+id/sua_escolha"
        app:layout_constraintStart_toEndOf="@+id/escolha_cpu"
        />

    <!-- resultado do placar -->
    <TextView
        android:id="@+id/placar_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_placar"
        android:textSize="@dimen/font_normal"
        android:textColor="@color/black"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/escolha_cpu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/seu_resultado_placar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_resultado"
        android:textSize="@dimen/font_normal"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/placar_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divisao_placar"
        />

    <TextView
        android:id="@+id/divisao_placar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_divisao_resultado"
        android:textSize="@dimen/font_normal"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/placar_txt"
        app:layout_constraintStart_toEndOf="@+id/seu_resultado_placar"
        app:layout_constraintEnd_toStartOf="@+id/cpu_resultado_placar"
        />

    <TextView
        android:id="@+id/cpu_resultado_placar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_resultado"
        android:textSize="@dimen/font_normal"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/placar_txt"
        app:layout_constraintStart_toEndOf="@+id/divisao_placar"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/nova_partida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:paddingLeft="65dp"
        android:paddingRight="65dp"
        android:text="@string/btn_nova_partia"
        android:textSize="@dimen/font_normal"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divisao_placar"
        app:layout_constraintVertical_bias="0.496" />

</androidx.constraintlayout.widget.ConstraintLayout>